--- a/Board-v2/src/main/resources/static/index.html
+++ b/Board-v2/src/main/resources/static/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <title>Hello</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    </head>
-
-    <body>
-        Hello
-        <a href="/hello">hello</a>
-    </body>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body> <ul>
+    <li>상품 관리 <ul>
+        <li><a href="/basic/items">상품 관리 - 기본</a></li> </ul>
+    </li> </ul>
+</body>
 </html>
