--- a/Board-v2/src/main/resources/static/html/post.html
+++ b/Board-v2/src/main/resources/static/html/post.html
@@ -17,37 +17,49 @@
             </div>
 
             <div>
-                <label for="itemId">상품 ID</label>
-                <input type="text" id="itemId" name="itemId"
+                <label for="postId">번호</label>
+                <input type="text" id="postId" name="postId"
                        class="form-control" value="1" readonly>
             </div>
 
             <div>
-                <label for="itemName">상품명</label>
-                <input type="text" id="itemName" name="itemName"
-                       class="form-control" value="상품A" readonly>
+                <label for="postTitle">제목</label>
+                <input type="text" id="postTitle" name="postTitle"
+                       class="form-control" value="제목A" readonly>
             </div>
 
             <div>
-                <label for="price">가격</label>
-                <input type="text" id="price" name="price"
-                       class="form-control" value="10000" readonly>
+                <label for="postWriter">작성자</label>
+                <input type="text" id="postWriter" name="postWriter"
+                       class="form-control" value="작성자" readonly>
             </div>
 
             <div>
-                <label for="quantity">수량</label>
-                <input type="text" id="quantity" name="quantity"
-                       class="form-control" value="10" readonly>
+                <label for="postContent">내용</label>
+                <input type="text" id="postContent" name="postContent"
+                       class="form-control" value="내용" readonly>
+            </div>
+
+            <div>
+                <label for="postDate">작성 날짜</label>
+                <input type="text" id="postDate" name="postDate"
+                       class="form-control" value="" readonly>
+            </div>
+
+            <div>
+                <label for="postHit">조회수</label>
+                <input type="text" id="postHit" name="postHit"
+                       class="form-control" value="500" readonly>
             </div>
 
             <hr class="my-4">
             <div class="row">
                 <div class="col">
-                    <button class="w-100 btn btn-primary btn-lg" onclick="location.href='editForm.html'" type="button">상품 수정</button>
+                    <button class="w-100 btn btn-primary btn-lg" onclick="location.href='editPost.html'" type="button">게시글 수정</button>
                 </div>
 
                 <div class="col">
-                    <button class="w-100 btn btn-secondary btn-lg"onclick="location.href='items.html'" type="button">목록으로</button>
+                    <button class="w-100 btn btn-secondary btn-lg" onclick="location.href='posts.html'" type="button">목록으로</button>
                 </div>
             </div>
         </div> <!-- /container -->
