--- a/Board-v2/src/main/resources/static/html/posts.html
+++ b/Board-v2/src/main/resources/static/html/posts.html
@@ -25,7 +25,7 @@
                             <th>작성자</th>
                             <th>내용</th>
                             <th>작성 날짜</th>
-                            <th>조회수</th>
+                            <th>조회수</th>호
                         </tr>
                     </thead>
 
