--- a/Board-v2/src/main/resources/static/html/post.html
+++ b/Board-v2/src/main/resources/static/html/post.html
@@ -60,7 +60,7 @@
 
                 <div class="col">
                     <button class="w-100 btn btn-secondary btn-lg" onclick="location.href='posts.html'" type="button">목록으로</button>
-                </div>
+                </div>자
             </div>
         </div> <!-- /container -->
     </body>
