--- a/Board-v2/src/main/resources/static/html/post.html
+++ b/Board-v2/src/main/resources/static/html/post.html
@@ -31,13 +31,13 @@
             <div>
                 <label for="postWriter">작성자</label>
                 <input type="text" id="postWriter" name="postWriter"
-                       class="form-control" value="작성자" readonly>
+                       class="form-control" value="작성자A" readonly>
             </div>
 
             <div>
                 <label for="postContent">내용</label>
                 <input type="text" id="postContent" name="postContent"
-                       class="form-control" value="내용" readonly>
+                       class="form-control" value="내용A" readonly>
             </div>
 
             <div>
