--- a/Board-v2/src/main/resources/static/html/posts.html
+++ b/Board-v2/src/main/resources/static/html/posts.html
@@ -1,54 +1,54 @@
-<!DOCTYPE HTML>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <link href="../css/bootstrap.min.css" rel="stylesheet">
-    </head>
+<!--<!DOCTYPE HTML>-->
+<!--<html>-->
+<!--    <head>-->
+<!--        <meta charset="utf-8">-->
+<!--        <link href="../css/bootstrap.min.css" rel="stylesheet">-->
+<!--    </head>-->
 
-    <body>
-        <div class="container" style="max-width: 600px">
-            <div class="py-5 text-center">
-                <h2>게시물 목록</h2>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <button class="btn btn-primary float-end" onclick="location.href='addPost.html'" type="button">게시물 등록</button>
-                </div>
-            </div>
-            <hr class="my-4">
-            <div>
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>번호</th>
-                            <th>제목</th>
-                            <th>작성자</th>
-                            <th>내용</th>
-                            <th>작성 날짜</th>
-                            <th>조회수</th>호
-                        </tr>
-                    </thead>
+<!--    <body>-->
+<!--        <div class="container" style="max-width: 600px">-->
+<!--            <div class="py-5 text-center">-->
+<!--                <h2>게시물 목록</h2>-->
+<!--            </div>-->
+<!--            <div class="row">-->
+<!--                <div class="col">-->
+<!--                    <button class="btn btn-primary float-end" onclick="location.href='addPost.html'" type="button">게시물 등록</button>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <hr class="my-4">-->
+<!--            <div>-->
+<!--                <table class="table">-->
+<!--                    <thead>-->
+<!--                        <tr>-->
+<!--                            <th>번호</th>-->
+<!--                            <th>제목</th>-->
+<!--                            <th>작성자</th>-->
+<!--                            <th>내용</th>-->
+<!--                            <th>작성 날짜</th>-->
+<!--                            <th>조회수</th>호-->
+<!--                        </tr>-->
+<!--                    </thead>-->
 
-                    <tbody>
-                        <tr>
-                            <td><a href="post.html">1</a></td>
-                            <td><a href="post.html">테스트 글 1</a></td>
-                            <td>홍길동</td>
-                            <td>안녕하세요</td>
-                            <td></td>
-                            <td>10</td>
-                        </tr>
-                        <tr>
-                            <td><a href="post.html">2</a></td>
-                            <td><a href="post.html">테스트 글 2</a></td>
-                            <td>John</td>
-                            <td>Hello</td>
-                            <td></td>
-                            <td>100</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div> <!-- /container -->
-    </body>
-</html>
+<!--                    <tbody>-->
+<!--                        <tr>-->
+<!--                            <td><a href="post.html">1</a></td>-->
+<!--                            <td><a href="post.html">테스트 글 1</a></td>-->
+<!--                            <td>홍길동</td>-->
+<!--                            <td>안녕하세요</td>-->
+<!--                            <td></td>-->
+<!--                            <td>10</td>-->
+<!--                        </tr>-->
+<!--                        <tr>-->
+<!--                            <td><a href="post.html">2</a></td>-->
+<!--                            <td><a href="post.html">테스트 글 2</a></td>-->
+<!--                            <td>John</td>-->
+<!--                            <td>Hello</td>-->
+<!--                            <td></td>-->
+<!--                            <td>100</td>-->
+<!--                        </tr>-->
+<!--                    </tbody>-->
+<!--                </table>-->
+<!--            </div>-->
+<!--        </div> &lt;!&ndash; /container &ndash;&gt;-->
+<!--    </body>-->
+<!--</html>-->
