--- a/Board-v2/src/main/resources/static/html/addPost.html
+++ b/Board-v2/src/main/resources/static/html/addPost.html
@@ -1,65 +1,65 @@
-<!DOCTYPE HTML>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <link href="../css/bootstrap.min.css" rel="stylesheet">
-        <style>
-            .container {
-                max-width: 560px;
-            }
-        </style>
-    </head>
+<!--<!DOCTYPE HTML>-->
+<!--<html>-->
+<!--    <head>-->
+<!--        <meta charset="utf-8">-->
+<!--        <link href="../css/bootstrap.min.css" rel="stylesheet">-->
+<!--        <style>-->
+<!--            .container {-->
+<!--                max-width: 560px;-->
+<!--            }-->
+<!--        </style>-->
+<!--    </head>-->
 
-    <body>
-        <div class="container">
-            <div class="py-5 text-center">
-                <h2>게시물 등록 폼</h2>
-            </div>
+<!--    <body>-->
+<!--        <div class="container">-->
+<!--            <div class="py-5 text-center">-->
+<!--                <h2>게시물 등록 폼</h2>-->
+<!--            </div>-->
 
-            <h4 class="mb-3">게시물 등록</h4>
-            <form action="post.html" method="post">
-                <div>
-                    <label for="postTitle">제목</label>
-                    <input type="text" id="postTitle" name="postTitle"
-                           class="form-control" placeholder="제목을 입력하세요">
-                </div>
+<!--            <h4 class="mb-3">게시물 등록</h4>-->
+<!--            <form action="post.html" method="post">-->
+<!--                <div>-->
+<!--                    <label for="postTitle">제목</label>-->
+<!--                    <input type="text" id="postTitle" name="postTitle"-->
+<!--                           class="form-control" placeholder="제목을 입력하세요">-->
+<!--                </div>-->
 
-                <div>
-                    <label for="postWriter">작성자</label>
-                    <input type="text" id="postWriter" name="postWriter"
-                           class="form-control" placeholder="작성자를 입력하세요">
-                </div>
+<!--                <div>-->
+<!--                    <label for="postWriter">작성자</label>-->
+<!--                    <input type="text" id="postWriter" name="postWriter"-->
+<!--                           class="form-control" placeholder="작성자를 입력하세요">-->
+<!--                </div>-->
 
-                <div>
-                    <label for="postContent">내용</label>
-                    <input type="text" id="postContent" name="postContent"
-                           class="form-control" placeholder="내용을 입력하세요">
-                </div>
+<!--                <div>-->
+<!--                    <label for="postContent">내용</label>-->
+<!--                    <input type="text" id="postContent" name="postContent"-->
+<!--                           class="form-control" placeholder="내용을 입력하세요">-->
+<!--                </div>-->
 
-                <div>
-                    <label for="postDate">작성 날짜</label>
-                    <input type="text" id="postDate" name="postDate"
-                           class="form-control" placeholder="작성 날짜를 입력하세요">
-                </div>
+<!--                <div>-->
+<!--                    <label for="postDate">작성 날짜</label>-->
+<!--                    <input type="text" id="postDate" name="postDate"-->
+<!--                           class="form-control" placeholder="작성 날짜를 입력하세요">-->
+<!--                </div>-->
 
-                <div>
-                    <label for="postHit">조회수</label>
-                    <input type="text" id="postHit" name="postHit"
-                           class="form-control" placeholder="조회수를 입력하세요">
-                </div>
+<!--                <div>-->
+<!--                    <label for="postHit">조회수</label>-->
+<!--                    <input type="text" id="postHit" name="postHit"-->
+<!--                           class="form-control" placeholder="조회수를 입력하세요">-->
+<!--                </div>-->
 
-                <hr class="my-4">
-                <div class="row">
-                    <div class="col">
-                        <button class="w-100 btn btn-primary btn-lg" type="submit">게시물 등록</button>
-                    </div>
+<!--                <hr class="my-4">-->
+<!--                <div class="row">-->
+<!--                    <div class="col">-->
+<!--                        <button class="w-100 btn btn-primary btn-lg" type="submit">게시물 등록</button>-->
+<!--                    </div>-->
 
-                    <div class="col">
-                        <button class="w-100 btn btn-secondary btn-lg"
-                                onclick="location.href='posts.html'" type="button">취소</button>
-                    </div>
-                </div>
-            </form>
-        </div> <!-- /container -->
-    </body>
-</html>
+<!--                    <div class="col">-->
+<!--                        <button class="w-100 btn btn-secondary btn-lg"-->
+<!--                                onclick="location.href='posts.html'" type="button">취소</button>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </form>-->
+<!--        </div> &lt;!&ndash; /container &ndash;&gt;-->
+<!--    </body>-->
+<!--</html>-->
