--- a/Board-v2/src/main/resources/static/index.html
+++ b/Board-v2/src/main/resources/static/index.html
@@ -6,7 +6,7 @@
 </head>
 <body> <ul>
     <li>상품 관리 <ul>
-        <li><a href="/basic/items">상품 관리 - 기본</a></li> </ul>
+        <li><a href="/boardV2/posts">상품 관리 - 기본</a></li> </ul>
     </li> </ul>
 </body>
 </html>
